card section added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- navbar start -->
-   <nav>
+   <!-- <nav>
     <div class="container">
         <div class="parents_nav">
             <div class="logo">
@@ -42,7 +42,7 @@
         </div>
     </div>\
     
-</section>
+</section> -->
 <!-- Banner part end -->
 </body>
 </html>
