Digital header added

--- a/index2.html
+++ b/index2.html
@@ -113,6 +113,21 @@
 
 </section>
 
+<section class="digitalSection">
+   <div class="container">
+    <div class="digitalHeader">
+        <div class="text">
+            <p>digital-experience</p>
+        <h3>Connect people in digital life</h3>
+        </div>
+        <div class="icon">
+            <a href=""><i class="fa-solid fa-x"></i></a>
+        </div>
+
+    </div>
+   </div>
+</section>
+
     
 </body>
 </html>
