Service section added

--- a/index2.html
+++ b/index2.html
@@ -112,7 +112,7 @@
     </div>
 
 </section>
-
+<!-- 
 <section class="digitalSection">
    <div class="container">
     <div class="digitalHeader">
@@ -126,6 +126,83 @@
 
     </div>
    </div>
+
+<div class="digitalMainSection">
+    <div class="img">
+        <picture>
+          <img src="Image/banner1.jpg" alt="">
+        </picture>
+
+    </div>
+    <div class="moreInfo">
+        <div class="textgap">
+            <h3>
+                More than just an ad agency, we harness the tools of traditional and digital.
+            </h3>
+            <p>With over 25 years of experience, we have crafted thousands of strategic discovery process that enables us to peel back the layers which enable us to understand, connect, represent and dominate your market.</p>
+            <button class="btn" id="btn-margin">Contact Us</button>
+        </div>
+
+    </div>
+</div>
+
+</section> -->
+
+<section class="hundred">
+    <div class="bg">
+        <img src="Image/Frame22.png" alt="">
+    </div>
+    <div class="container">
+        <div class="digitalHeader">
+            <div class="text">
+                <p>digital-experience</p>
+            <h3>The hundred of completed  counting</h3>
+            </div>
+            <div class="icon">
+                <button class="btn2" id="btn-margin">Contact Us</button>
+            </div>  
+        </div>
+        <div class="hundredFlex">
+            <div class="mobileApp">
+                <div class="innerImg">
+                    <img src="Image/mobileapp.jpg" alt="">
+                </div>
+                <div class="innerText">
+                    <h4>Mobile App</h4>
+                    <p>Read More</p>
+                </div>
+            </div>
+            <div class="eCommerce">
+                <div class="innerImg">
+                    <img src="Image/ecommerce.jpg" alt="">
+                </div>
+                <div class="innerText">
+                    <h4>ECommerce Solution</h4>
+                    <p>Read More</p>
+                </div>
+            </div>
+        </div>
+        <div class="hundredFlex row-revers">
+            <div class="mobileApp">
+                <div class="innerImg">
+                    <img src="Image/mobileapp.jpg" alt="">
+                </div>
+                <div class="innerText">
+                    <h4>Mobile App</h4>
+                    <p>Read More</p>
+                </div>
+            </div>
+            <div class="eCommerce">
+                <div class="innerImg">
+                    <img src="Image/ecommerce.jpg" alt="">
+                </div>
+                <div class="innerText">
+                    <h4>ECommerce Solution</h4>
+                    <p>Read More</p>
+                </div>
+            </div>
+        </div>
+       </div>
 </section>
 
     
