Service section added

--- a/index2.html
+++ b/index2.html
@@ -112,7 +112,7 @@
     </div>
 
 </section>
-<!-- 
+ 
 <section class="digitalSection">
    <div class="container">
     <div class="digitalHeader">
@@ -146,9 +146,9 @@
     </div>
 </div>
 
-</section> -->
+</section> 
 
-<section class="hundred">
+ <section class="hundred">
     <div class="bg">
         <img src="Image/Frame22.png" alt="">
     </div>
@@ -204,6 +204,41 @@
         </div>
        </div>
 </section>
+
+<section class="completed-works">
+    <div class="container">
+       <div class="completed-services">
+        <div class="completed-project">
+            <div class="smallcard">
+                <h5>19+</h5>
+                <p>Total top service</p>
+            </div>
+
+            <div class="smallcard">
+                <h5>19+</h5>
+                <p>Total top service</p>
+            </div>
+            <div class="smallcard">
+                <h5>19+</h5>
+                <p>Total top service</p>
+            </div>
+            <div class="smallcard">
+                <h5>19+</h5>
+                <p>Total top service</p>
+            </div>
+        </div>
+        <div class="completed-tittle">
+            <h3>
+                The hundred of completed works still counting
+            </h3>
+            <p>Through strategy, design, and planning we build brand identities that connect with your Nesi. We then fine-tune a marketing plan that allows us to laser focus and target your audience through the right channels.</p>
+            <button class="btn" id="btn-margin">Contact Us</button>
+    
+        </div>
+       </div>
+    </div>
+
+</section> 
 
     
 </body>
